--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="menu_subutm">SubUTM</string>
     <string name="menu_alliances">Alliances</string>
     <string name="menu_encryption">Encryption</string>
+    <string name="google_maps_key">AIzaSyBEfS7UnTUYaChhdMEKECoHr27BxZcPtTI</string>
 
 </resources>
